--- a/.github/workflows/release-master.yml
+++ b/.github/workflows/release-master.yml
@@ -17,6 +17,7 @@ jobs:
 
     # 2. Install PHP and Composer
     - name: Setup PHP
+      if: ${{ github.event.release.target_commitish == 'master' }}
       uses: shivammathur/setup-php@v2
       with:
         php-version: '8.2'
@@ -25,6 +26,7 @@ jobs:
 
     # 3. Installing dependencies
     - name: Install dependencies
+      if: ${{ github.event.release.target_commitish == 'master' }}
       run: composer install --no-dev --optimize-autoloader
 
     # 4. Creating an archive
