--- a/.github/workflows/release-master.yml
+++ b/.github/workflows/release-master.yml
@@ -21,7 +21,7 @@ jobs:
       uses: shivammathur/setup-php@v2
       with:
         php-version: '8.2'
-        extensions: mbstring, intl, zip # Укажите нужные расширения
+        extensions: mbstring, intl, zip
         tools: composer
 
     # 3. Installing dependencies
